--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "randomizer",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
+  "homepage": "/projects/pet/randomizer/",
   "dependencies": {
-    "@types/node": "^18.7.23",
+    "@types/node": "^18.11.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.2",
-    "eslint": "^8.24.0",
+    "eslint": "^8.25.0",
     "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
-    "sass-loader": "^13.0.2",
+    "sass-loader": "^13.1.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
@@ -28,8 +29,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,13 +45,13 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "hygen": "^6.2.11"
   }
